# patac_protocol

./: .gitignore  CMakeLists.txt  README.md  build.sh  generate_protocol.sh  protocol_sync.py
cmake/: ccache.cmake  dependency.cmake  version.cmake
conf/: settings.json
generate/: basic_pb2.py  calibration_result_pb2.py  camera_extrinsics_pb2.py  camera_intrinsics_pb2.py  camera_pb2.py  common_pb2.py  cylinder_multitask_pb2.py  dynamic_obstacle_debug_info_pb2.py  dynamic_obstacle_pb2.py  dynamic_obstacles_pb2.py  eol_initial_pb2.py  fail_safe_result_pb2.py  file_calib_pb2.py  frame_pb2.py  fusion_freespace_pb2.py  fusion_obstacle_pb2.py  fusion_parking_slots_pb2.py  fusion_system_pb2.py  gnss_pb2.py  hmi_hpa_render_all_map_pb2.py  hmi_hpa_render_pb2.py  hmi_map_display_pb2.py  hmi_map_parking_slots_pb2.py  hmi_render_pb2.py  image_data_pb2.py  image_pb2.py  imu_pb2.py  ipm_multitask_pb2.py  ipm_parsing_pb2.py  iqa_parsing_pb2.py  lane_line_pb2.py  lane_multitask_pb2.py  lane_onl_calib_pb2.py  loc_odo_pb2.py  localization_pb2.py  map_display_pb2.py  map_loc_system_pb2.py  map_objects_pb2.py  module_task_pb2.py  ndm_base_pb2.py  (+24 more)
include/interface/: module_task_data.h  transaction_data.h
include/model/: calibration_result_data.h  camera_data.h  camera_extrinsics_data.h  camera_intrinsics_data.h  eol_initial_data.h  gnss_comm.h  gnss_data.h  imu_comm.h  imu_data.h
include/module/: module_base.h
include/processor/: processor_base.h
include/protocol/: basic.pb.h  camera.pb.h  camera_extrinsics.pb.h  common.pb.h  eol_initial.pb.h  fail_safe_result.pb.h  file_calib.pb.h  frame.pb.h  fusion_freespace.pb.h  fusion_parking_slots.pb.h  image.pb.h  imu.pb.h  ipm_multitask.pb.h  ndm_base.pb.h  parking_slot.pb.h  parking_slots.pb.h  parsing.pb.h  patac_dr.pb.h  patac_image.pb.h  patac_slot.pb.h  patac_trajetory.pb.h  real3d.pb.h  road_info.pb.h  speed_bump.pb.h  static_obstacles.pb.h  topics.pb.h  transaction.pb.h  uss_obstacles.pb.h  (+3 more)
src/: CMakeLists.txt  main.cpp
src/foundation/message/: CMakeLists.txt  data_ref.cpp  flex_ray.cpp  message.cpp  serializer.cpp
src/foundation/message/proto/: proto_serializer.cpp
src/foundation/message/raw/: raw_serializer.cpp
src/foundation/type/: common_msg_data.cpp  time_series_data.cpp
src/interface/: module_task_data.cpp  transaction_data.cpp
src/interface/parking/: cylinder_multitask_data.cpp  dynamic_obstacles_data.cpp  dynamic_obstacles_gt_data.cpp  fail_safe_result_data.cpp  fusion_freespace_data.cpp  fusion_obstacle_data.cpp  fusion_parking_slots_data.cpp  fusion_result_data.cpp  fusion_system_data.cpp  hmi_hpa_render_all_map_data.cpp  hmi_hpa_render_data.cpp  hmi_map_display_data.cpp  hmi_map_parking_slots_data.cpp  hmi_render_data.cpp  image_data.cpp  ipm_multitask_data.cpp  ipm_parsing_data.cpp  iqa_parsing_data.cpp  lane_line_data.cpp  lane_multitask_data.cpp  lane_onl_calib_data.cpp  localization_data.cpp  map_display_data.cpp  map_loc_system_data.cpp  map_objects_data.cpp  odometry_data.cpp  onl_calibration_data.cpp  parking_slots_data.cpp  parsing_data.cpp  processor_info_data.cpp  reference_lines_data.cpp  road_info_data.cpp  speed_bump_data.cpp  static_obstacles_data.cpp  sync_cylinder_parsing_data.cpp  uss_obstacles_data.cpp  uss_parking_slots_data.cpp  uss_tracking_mode_data.cpp  vision_debug_data.cpp  vision_system_data.cpp  (+1 more)
src/interface/parking/serializer/: cylinder_multitask_serializer.cpp  dynamic_obstacles_debug_serializer.cpp  dynamic_obstacles_serializer.cpp  dynamic_obstacles_serializer_gt.cpp  fail_safe_result_serializer.cpp  fusion_freespace_serializer.cpp  fusion_obstacle_serializer.cpp  fusion_parking_slots_serializer.cpp  fusion_system_serializer.cpp  hmi_hpa_render_all_map_serializer.cpp  hmi_hpa_render_serializer.cpp  hmi_map_display_serializer.cpp  hmi_map_parking_slots_serializer.cpp  hmi_render_serializer.cpp  image_serializer.cpp  ipm_multitask_serializer.cpp  ipm_parsing_serializer.cpp  iqa_parsing_serializer.cpp  lane_line_serializer.cpp  lane_multitask_serializer.cpp  lane_onl_calib_serializer.cpp  localization_serializer.cpp  map_display_serializer.cpp  map_loc_system_serializer.cpp  map_objects_serializer.cpp  odometry_serializer.cpp  parking_slots_serializer.cpp  parsing_serializer.cpp  processor_info_serializer.cpp  reference_lines_serializer.cpp  road_info_serializer.cpp  speed_bump_serializer.cpp  static_obstacles_serializer.cpp  sync_cylinder_parsing_serializer.cpp  uss_obstacles_serializer.cpp  uss_parking_slots_serializer.cpp  uss_tracking_mode_serializer.cpp  vision_system_serializer.cpp  vpa_state_serializer.cpp
src/interface/serializer/: module_task_serializer.cpp  transaction_serializer.cpp
src/model/: calibration_result_data.cpp  camera_data.cpp  camera_extrinsics_data.cpp  camera_intrinsics_data.cpp  eol_initial_data.cpp  gnss_data.cpp  imu_data.cpp
src/model/serializer/: calibration_result_serializer.cpp  camera_extrinsics_serializer.cpp  camera_intrinsics_serializer.cpp  camera_serializer.cpp  eol_initial_serializer.cpp  gnss_serializer.cpp  imu_serializer.cpp
src/protocol/: basic.pb.cc  camera.pb.cc  camera_extrinsics.pb.cc  camera_intrinsics.pb.cc  eol_initial.pb.cc  frame.pb.cc  fusion_freespace.pb.cc  fusion_parking_slots.pb.cc  hmi_map_display.pb.cc  hmi_map_parking_slots.pb.cc  hmi_render.pb.cc  imu.pb.cc  ipm_multitask.pb.cc  iqa_parsing.pb.cc  lane_line.pb.cc  lane_multitask.pb.cc  ndm_base.pb.cc  odometry_data.pb.cc  parking_slot.pb.cc  parsing.pb.cc  patac_image.pb.cc  patac_trajetory.pb.cc  perception_base.pb.cc  processor_info.pb.cc  refrence_lines.pb.cc  speed_bump.pb.cc  system_type_base.pb.cc  topics.pb.cc  transaction.pb.cc  uss_obstacles.pb.cc  uss_parking_slots.pb.cc  uss_tracking_mode.pb.cc  vision_debug.pb.cc  vpa_state.pb.cc
src/serializer/: common_serializer.cpp
src/type/: dynamic_obstacle_debug_info.cpp
src/type/serializer/: dynamic_obstacle_debug_info_serializer.cpp  dynamic_obstacle_serializer.cpp  mapinfo_header_serialize.cpp  parking_slot_serializer.cpp
src/utils/: exception.cpp  rle_utils.cpp
src/version/: types.cpp  version.h.in
(+260 files in other folders)
